<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menuTopItem"
        android:title="@string/menuTopItem_title"
        android:icon="@drawable/ic_icon"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/menuItem1"
        android:title="@string/menuItem1_title"
        app:showAsAction="never"/>
    <item android:id="@+id/menuItem2"
        android:title="@string/menuItem2_title"
        app:showAsAction="never">
        <menu >
            <item android:id="@+id/menuSubitem1"
                android:title="@string/menuSubitem1_title" />
            <item android:id="@+id/menuSubitem2"
                android:title="@string/menuSubitem2_title" />
        </menu>
    </item>
</menu>